--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="style/main.css">
+    <!--Responsividade-->
+    <link rel="stylesheet" href="style/responsive.css">
+    <!-- Arquivos owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
     <title>BARBIE FLIX</title>
 </head>
+
 <body>
-   <header>
+   
+    <header>
     <div class="container">
         <h2 class="logo">BARBIE FLIX</h2>
         <nav>
@@ -19,5 +27,62 @@
         </nav>
     </div>
    </header>
+
+   <main>
+        <div class="principal">
+            <div class="container">
+             <h3 class="titulo">BARBIE A PRINCESA E A PEBLÉIA</h3>
+                <p class="descricao">Uma plebeia, moradora de um vilarejo, é muito parecida com a princesa do reino. Os destinos das duas se cruzam quando a princesa é sequestrada, e a moça humilde usa sua incrível semelhança com ela para tentar salvar das mãos do vilão.</p>
+                <div class="butoes">
+                  <button role="button" class="botao">
+                    <i class="fa-solid fa-play"></i>
+                    ASSISTIR AGORA</button>
+                 <button role="button" class="botao">
+                    <i class="fa-solid fa-circle-info"></i>
+                    MAIS INFORMAÇÕES</button>
+                </div>
+            </div>
+        </div>
+   </main>
+
+   <div class="carrossel">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="imagens/min1.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagens/min2.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagens/min3.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagens/min4.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagens/min5.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagens/min6.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagens/min7.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagens/min8.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagens/min9.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagens/min10.jpg" alt="">
+            </div>
+        </div>
+   </div>
+
+   <script src="https://kit.fontawesome.com/dde187002d.js" crossorigin="anonymous"></script>
+   <script src="js/owl/jquery.min.js"></script>
+   <script src="js/owl/owl.carousel.min.js"></script>
+   <script src="js/owl/setup.js"></script>
 </body>
 </html>
